[package]
name = "audio_virtualizer"
description = "A simple audio visualizer for macOS."
authors = ["Volodymyr Shulakov <a7292969@gmail.com>"]
version = "0.1.0"
edition = "2024"

[dependencies]
cpal = "0.16"
concurrent-queue = "2.5"
rustfft = "6.4"
hound = "3.5"
num-complex = "0.4"
num-traits = "0.2"
num-derive = "0.4"
winit = "0.30"
tray-icon = "0.21"
png = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "6.0"
lazy_static = "1.5"
strum = "0.27"
strum_macros = "0.27"

[package.metadata.bundle]
name = "Audio Virtualizer"
identifier = "com.volodya7292.audio_virtualizer"
copyright = "2025 Volodymyr Shulakov"
icon = ["res/icon.png"]
osx_info_plist_exts = ["Info.plist.ext"]
