[package]
name = "audio_virtualizer"
description = "A simple audio visualizer for macOS."
authors = ["Volodymyr Shulakov <a7292969@gmail.com>"]
version = "0.1.0"
edition = "2024"

[dependencies]
cpal = "0.17"
concurrent-queue = "2.5"
ringbuf = "0.4"
realfft = "3.5"
hound = "3.5"
num-complex = "0.4"
num-traits = "0.2"
num-derive = "0.4"
winit = "0.30"
tray-icon = "0.21"
png = "0.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "6.0"
lazy_static = "1.5"
strum = "0.27"
strum_macros = "0.27"
log = "0.4"
flexi_logger = "0.31"
log-panics = "2.1"

[profile.dev]
opt-level = 2

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[package.metadata.bundle]
name = "Audio Virtualizer"
identifier = "com.volodya7292.audio_virtualizer"
copyright = "2025 Volodymyr Shulakov"
icon = ["res/icon.png"]
osx_info_plist_exts = ["Info.plist.ext"]
